WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134572
REGRESSION(WK2): Undo does not work in text fields in Safari
https://bugs.webkit.org/show_bug.cgi?id=134572
Summary
REGRESSION(WK2): Undo does not work in text fields in Safari
Enrica Casucci
Reported
2014-07-02 17:38:23 PDT
<
rdar://problem/17542238
>
Attachments
Patch
(5.23 KB, patch)
2014-07-02 17:42 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-07-02 17:42:12 PDT
Created
attachment 234300
[details]
Patch
WebKit Commit Bot
Comment 2
2014-07-02 17:45:15 PDT
Attachment 234300
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/PageClientImplIOS.mm:65: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 3
2014-07-02 17:57:10 PDT
Comment on
attachment 234300
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=234300&action=review
Looks reasonable.
> Source/WebKit2/UIProcess/ios/PageClientImplIOS.mm:89 > +- (WebEditCommandProxy*)command
Space before the star.
Enrica Casucci
Comment 4
2014-07-02 18:00:04 PDT
Committed revision 170738.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug