REGRESSION(WK2): Undo does not work in text fields in Safari. https://bugs.webkit.org/show_bug.cgi?id=134572 <rdar://problem/17542238>

Reviewed by Benjamin Poulain.

This patch adds for iOS the same implementation we have already for OS X.

* UIProcess/ios/PageClientImplIOS.h:
* UIProcess/ios/PageClientImplIOS.mm:
(-[WKEditCommandObjC initWithWebEditCommandProxy:]):
(-[WKEditCommandObjC command]):
(-[WKEditorUndoTargetObjC undoEditing:]):
(-[WKEditorUndoTargetObjC redoEditing:]):
(WebKit::PageClientImpl::PageClientImpl):
(WebKit::PageClientImpl::registerEditCommand):
(WebKit::PageClientImpl::clearAllEditCommands):
(WebKit::PageClientImpl::canUndoRedo):
(WebKit::PageClientImpl::executeUndoRedo):



Canonical link: https://commits.webkit.org/152560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170738 268f45cc-cd09-0410-ab3c-d52691b4dbfc