Source/WebKit2/UIProcess/ios/PageClientImplIOS.h
@@ -34,6 +34,7 @@
 
 OBJC_CLASS WKContentView;
 OBJC_CLASS WKWebView;
+OBJC_CLASS WKEditorUndoTargetObjC;
 
 namespace WebKit {
     
@@ -168,6 +169,7 @@ private:
 
     WKContentView *m_contentView;
     WKWebView *m_webView;
+    RetainPtr<WKEditorUndoTargetObjC> m_undoTarget;
 };
 } // namespace WebKit
 
